@@ -1,6 +1,7 @@
 wdm.targetPath=~/.m2/repository/webdriver
 wdm.override=false
 wdm.timeout=30
+wdm.seekErrorRetries=3
 
 wdm.chromeDriverUrl=http://chromedriver.storage.googleapis.com/
 wdm.chromeDriverExport=webdriver.chrome.driver
